fix removal when rebasing, remove z-index of the tooltip causing bugs in the ui

--- a/src/css/aladin.css
+++ b/src/css/aladin.css
@@ -978,7 +978,7 @@ canvas {
     font-family: monospace;
     line-height: 1rem;
 
-    z-index: 100;
+    /*z-index: 100;*/
     
     float: left;
 }
